fixed spacing of sections and changed media to happen sooner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ section h1 {
 }
 
 .aboutme h1 {
-    margin: 0 30px 0 40px;
+    margin: 40px 30px 0 40px;
 }
 
 .aboutme p {
@@ -108,7 +108,7 @@ section h1 {
 }
 
 .contact {
-    margin: 10px 10px 10px 10px;
+    margin: 30px 10px 10px 10px;
 }
 
 .contact h1 {
@@ -137,7 +137,7 @@ section h1 {
     color: var(--secondary-color);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
    section h1 {
        float: none;
        border-right: none;
